refactor: System 模块服务层代码简化重构 (#234)
简化服务实现类，消除重复代码，提取公共方法。

Closes #226

Co-authored-by: 厚礼蟹 <16126806+dengxingzhi@user.noreply.gitee.com>